fix transform circle items animation & move date range styles in styled-components & add event type on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,6 @@ button:not([disabled]) {
   cursor: pointer;
 }
 
-.years-text {
-  display: inline-flex;
-  position: relative;
-}
-
-
 .circle {
   display: flex;
   flex-direction: column;
@@ -21,25 +15,6 @@ button:not([disabled]) {
   position: relative;
   margin: 0 auto;
   z-index: 2;
-}
-
-.circle>.years-text {
-  font-size: 200px;
-  text-wrap: nowrap;
-  font-weight: bold;
-  letter-spacing: -0.02em;
-  line-height: 160px;
-  transform: translateX(-16px);
-}
-
-.circle>.years-text>mark:first-child {
-  color: #5D5FEF;
-  background: none;
-}
-
-.circle>.years-text>mark:last-child {
-  color: #EF5DA8;
-  background: none;
 }
 
 .circle-items {
@@ -131,11 +106,30 @@ button:not([disabled]) {
 }
 
 .swiper-container {
-  margin: 56px 160px 0 80px;
+  margin: 56px 80px 0 80px;
   cursor: grab;
 }
 
+.swiper-container>.swiper:last-child {
+  display: none;
+  width: fit-content;
+  margin: 0 auto;
+}
 
+.swiper-container>.swiper:last-child .swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 6px !important;
+  height: 6px;
+  cursor: pointer;
+  /* padding: 5px; */
+  border-radius: 100%;
+  background: #E9EBF1;
+}
+.swiper-container>.swiper:last-child .swiper-slide.swiper-slide-active {
+  background: #D8DBE5;
+}
 .line-vertical {
   position: absolute;
   min-height: 100%;
@@ -162,14 +156,13 @@ button:not([disabled]) {
 
 /* EventYear comnponent styles */
 
-.year {
-  /* prevents messing around with text on user-select (breaks text placement on text select with keyboard) */
+/* .year {
   user-select: none;
   display: flex;
   line-height: 1;
-}
+} */
 
-.digit {
+/* .digit {
   width: calc(1ch - 0.02em);
   height: 1em;
   overflow: hidden;
@@ -179,14 +172,14 @@ button:not([disabled]) {
 .digit-stack {
   display: flex;
   flex-direction: column;
-}
+} */
 
-.digit-stack span {
+/* .digit-stack span {
   height: 1em;
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 
 /*  */
 /* .swiper-button-slot {
@@ -222,6 +215,7 @@ button:not([disabled]) {
   .line-vertical, .line-horizontal {
     display: none;
   }
+
   .circle {
     padding: 56px 0;
     border: none;
@@ -230,21 +224,34 @@ button:not([disabled]) {
     width: 100%;
     height: auto;
   }
-  .circle > .years-text {
-    font-size: 56px;
-    /* margin: 0 auto; */
-    line-height: inherit;
-    transform: none;
-  }
-  .circle-items {
+
+  .circle-items button{
     display: none;
+  }
+
+  .circle-items > div {
+    transform: none;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: flex-end;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  
+  .circle-items > div > div {
+    transform: none !important;
+  }
+  .circle-items > div > div > span {
+    font-size: 16px;
+    font-weight: bold;  
   }
 
   .swiper-container {
     padding-top: 20px;
-    padding-bottom: 78px;
     margin: 0;
     cursor: grab;
+    transition: display .8s ease-in;
   }
 
   .swiper-slide-card>h2.title {
@@ -261,23 +268,34 @@ button:not([disabled]) {
   .next-slide-button {
     display: none;
   }
+
   .prev-slide-class, .next-slide-class {
     opacity: .4;
   }
 
   .circle-action-buttons {
     left: 0;
-    bottom: 0;
+    bottom: -19px;
     padding: 0;
     position: absolute;
     gap: 11px;
   }
+
   .circle-action-buttons>div{
-    gap: 16px;
-    scale: .5;
-    transform: translate(-50%, -50%);
+    gap: 8px;
   }
-  /* .circle-action-buttons button{
+
+  .circle-action-buttons button>svg{
     scale: .5;
-  } */
+  }
+
+  .circle-action-buttons button{
+    width: 25px;
+    height: 25px;
+  }
+
+  .swiper-container>.swiper:last-child {
+    display: block;
+    margin-top: 103px;
+  }
 }
